Improved diffing and fixed highlighting of changed tokens.

--- a/Project/Prism/Base.lproj/Document.xib
+++ b/Project/Prism/Base.lproj/Document.xib
@@ -31,7 +31,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="507" height="413"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView editable="NO" selectable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="YCS-96-E5B">
+                                <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="YCS-96-E5B">
                                     <rect key="frame" x="0.0" y="0.0" width="507" height="413"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
